--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
   ],
   "license": "MIT",
   "dependencies": {
-    "moment": ">=2.10.3"
+    "moment": ">=2.10.3",
+    "prop-types": "^15.5.10"
   },
   "devDependencies": {
     "babel-eslint": "^4.1.6",
